# EidLA

./: .clang-format  .travis.yml  CMakeLists.txt  EidLAConfig.cmake  LICENSE.md  README.md  README.rst  run-clang-format.sh
.github/workflows/: cppBuild.yml
documents/bidiagonalization/: bidiag.m
example/: CMakeLists.txt  main.cpp
example/matrix_properties/: CMakeLists.txt
example/svd_compression/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/inc/: datastructures.hpp  decomposition.hpp  exceptions.hpp  graph.hpp  interpolation.hpp  matrix.hpp  matrix4x4.hpp  multiplier.hpp  solve.hpp  transformation.hpp
lib/inc/pattern/: sample.hpp  sample_generation.hpp  sample_statistic.hpp
lib/src/: matrix4x4.cpp
lib/test/: main.cpp  matrix_arithmetic.cpp  t_datastructures.cpp  t_decomposition.cpp  t_graph.cpp  t_interpolation.cpp  t_matrix.cpp  t_matrix4x4.cpp  t_matrix_add_sub.cpp  t_matrix_advanced.cpp  t_matrix_arithmetic.cpp  t_matrix_mul.cpp  t_multiplier.cpp  t_sample_gen.cpp  t_sample_statistics.cpp  t_solve.cpp  t_transformation.cpp
